--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
+    "enzyme": "^2.7.0",
     "livescript": "^1.5.0",
     "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0"
+  },
+  "peerDependencies": {
+    "react": "15.4.2"
+  },
+  "dependencies": {
+    "lodash.assign": "^4.2.0",
+    "lodash.pull": "^4.1.0"
   }
 }
