--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "scripts": {
     "build": "webpack",
+    "prepblish": "npm run build",
     "test": "mocha 'src/**/*.spec.ls'"
   },
   "license": "MIT",
@@ -24,5 +25,8 @@
   "dependencies": {
     "lodash.assign": "^4.2.0",
     "lodash.pull": "^4.1.0"
-  }
+  },
+  "files": [
+    "index.js"
+  ]
 }
