--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "livescript": "^1.5.0",
     "livescript-loader": "^0.1.6",
     "mocha": "^3.2.0",
+    "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "webpack": "^2.2.0-rc.4",
