--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "webpack",
     "prepublish": "npm run build",
-    "test": "mocha 'src/**/*.spec.ls'"
+    "test": "mocha --reporter dot 'src/**/*.spec.ls'"
   },
   "license": "MIT",
   "devDependencies": {
