--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.3",
   "scripts": {
     "build": "webpack",
-    "prepublish": "npm run build",
+    "prepublish": "yarn run build",
     "test": "mocha 'src/**/*.spec.ls'"
   },
   "license": "MIT",
