--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "dependencies": {
     "lodash.assign": "^4.2.0",
-    "lodash.pull": "^4.1.0",
-    "lodash.set": "^4.3.2"
+    "lodash.pull": "^4.1.0"
   },
   "files": [
     "index.js"
