--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "lodash.assign": "^4.2.0",
     "lodash.intersection": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.pull": "^4.1.0",
     "lodash.set": "^4.3.2"
   },
