--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "lodash.assign": "^4.2.0",
     "lodash.intersection": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
     "lodash.pull": "^4.1.0"
   },
   "files": [
