--- a/package.json
+++ b/package.json
@@ -25,11 +25,7 @@
     "react": "15.4.2"
   },
   "dependencies": {
-    "lodash.assign": "^4.2.0",
-    "lodash.intersection": "^4.4.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.pull": "^4.1.0",
-    "lodash.set": "^4.3.2"
+    "lodash": "^4.17.4"
   },
   "files": [
     "index.js"
