--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "livescript-loader": "^0.1.6",
     "mocha": "^3.2.0",
     "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
-    "sinon": "^1.17.6",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "webpack": "^2.2.0-rc.4",
+    "webpack": "^2.4.1",
     "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
     "react": "15.4.2"
   },
   "dependencies": {
-    "prelude-ls": "^1.1.2"
+    "prelude-ls": "^1.1.2",
+    "react-test-renderer": "^15.5.4"
   },
   "files": [
     "index.js"
