--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
-    "react": "15.4.2"
+    "react": "^15.4.2"
   },
   "dependencies": {
     "prelude-ls": "^1.1.2",
